--- a/doc/README.md.erb
+++ b/doc/README.md.erb
@@ -69,9 +69,9 @@ in the payload:
 
 <% @events.each do |event_type, data_hashes| %>
 #### `<%= event_type %>`
-<% data_hashes.each do |key, fields| %>
-- **<%= key %>**: <%= fields.join(", ") unless fields.nil? %>
-<% end %>
+  <% data_hashes.each do |key, data| %>
+- **<%= key %>:** <%= data.join(', ') %>
+  <% end %>
 <% end %>
 
 
