--- a/doc/README.md.erb
+++ b/doc/README.md.erb
@@ -81,12 +81,9 @@ There are two steps to adding a new integration:
 1. Add an integration class to the `lib/integrations` directory. This
    should inherit from the `Integrations::Base` class and should
    overwrite the `send_event` method. If the integration post is
-   unsuccessful, you should raise one of the following errors:
-   `Integrations::UserConfigurationError` for user configuration
-   problems (such as invalid credentials);
-   `Integrations::MisconfiguredIntegrationError` for non-user problems
-   in the integrations data from Rainforest; and `Integrations::Error`
-   for all other problems.
+   unsuccessful, you should raise `Integrations::Error.new(type, message)`
+   where `type` is either `user_configuration_error` or `misconfigured_integration`
+   depending on the cause and `message` is a custom message to describe the error.
 2. Edit `data/integrations.yml` to add your integration (including the
    appropriate values for `title` and `settings`).
 
